// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components - Header When no type is provided renders without type 1`] = `
<View
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFF",
        "borderRadius": 30,
        "elevation": 5,
        "justifyContent": "center",
        "paddingHorizontal": 30,
        "shadowColor": "#000",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.25,
        "shadowRadius": 3.84,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 20,
          "marginTop": -40,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#444",
            },
            Object {
              "borderRadius": 80,
              "height": 80,
              "width": 80,
            },
          ]
        }
      >
        <Image
          source={
            Object {
              "uri": "https://reactnative.dev/img/tiny_logo.png",
            }
          }
          style={
            Object {
              "borderRadius": 80,
              "height": 80,
              "width": 80,
            }
          }
        />
      </View>
    </View>
    <Text
      style={
        Object {
          "fontSize": 20,
          "marginBottom": 8,
          "textAlign": "center",
        }
      }
    >
      Bob
    </Text>
    <Text
      style={
        Object {
          "fontSize": 14,
          "marginVertical": 8,
          "textAlign": "center",
        }
      }
    >
      Needs feeding 2 times a day
    </Text>
    <View
      style={
        Object {
          "marginTop": 25,
        }
      }
    >
      <View
        accessible={true}
        focusable={false}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "blue",
            "borderRadius": 45,
            "marginBottom": 15,
            "opacity": 1,
            "paddingHorizontal": 15,
            "paddingVertical": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#FFF",
              "textAlign": "center",
            }
          }
        >
          Close
        </Text>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "red",
            "borderRadius": 45,
            "marginBottom": 15,
            "opacity": 1,
            "paddingHorizontal": 15,
            "paddingVertical": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#FFF",
              "textAlign": "center",
            }
          }
        >
          Delete
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Components - Header renders 1`] = `
<View
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFF",
        "borderRadius": 30,
        "elevation": 5,
        "justifyContent": "center",
        "paddingHorizontal": 30,
        "shadowColor": "#000",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.25,
        "shadowRadius": 3.84,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 20,
          "marginTop": -40,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#444",
            },
            Object {
              "borderRadius": 80,
              "height": 80,
              "width": 80,
            },
          ]
        }
      >
        <Image
          source={
            Object {
              "uri": "https://reactnative.dev/img/tiny_logo.png",
            }
          }
          style={
            Object {
              "borderRadius": 80,
              "height": 80,
              "width": 80,
            }
          }
        />
      </View>
    </View>
    <Text
      style={
        Object {
          "fontSize": 20,
          "marginBottom": 8,
          "textAlign": "center",
        }
      }
    >
      Bob
    </Text>
    <Text
      id="type"
      style={
        Object {
          "fontSize": 14,
          "marginVertical": 8,
          "textAlign": "center",
        }
      }
    >
      Cat
    </Text>
    <Text
      style={
        Object {
          "fontSize": 14,
          "marginVertical": 8,
          "textAlign": "center",
        }
      }
    >
      Needs feeding 2 times a day
    </Text>
    <View
      style={
        Object {
          "marginTop": 25,
        }
      }
    >
      <View
        accessible={true}
        focusable={false}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "blue",
            "borderRadius": 45,
            "marginBottom": 15,
            "opacity": 1,
            "paddingHorizontal": 15,
            "paddingVertical": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#FFF",
              "textAlign": "center",
            }
          }
        >
          Close
        </Text>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "red",
            "borderRadius": 45,
            "marginBottom": 15,
            "opacity": 1,
            "paddingHorizontal": 15,
            "paddingVertical": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#FFF",
              "textAlign": "center",
            }
          }
        >
          Delete
        </Text>
      </View>
    </View>
  </View>
</View>
`;
